Let's grammar better

--- a/dada/templates/manage_list_consent.tmpl
+++ b/dada/templates/manage_list_consent.tmpl
@@ -51,8 +51,8 @@
 	<!-- tmpl_if expr="list_settings.tracker_track_email == 1" -->
 		<div class="alert-box warning radius">
 			<p>
-				This mailing list current tracks mass mailing clickthrough and mass mailing message open tracking data, 
-				and saves this data with the email address of the subscribers associated with this data. 
+				This mailing list currently tracks mass mailing clickthrough and mass mailing message open tracking data, 
+				then saves this data with the email address of the subscribers associated with this data. 
 			</p>
 		</div>
 	<!-- /tmpl_if -->
