--- a/dada/templates/back_link_screen.tmpl
+++ b/dada/templates/back_link_screen.tmpl
@@ -45,23 +45,28 @@
 
 	<div class="row">
 		<div class="small-12 columns">
-			<label for="website_name">
+			<label for="back_link_website_name">
 				Site Name
 			</label>
-			<input type="text" name="website_name" id="website_name" value="<!-- tmpl_var list_settings.website_name escape="HTML"-->"  >
+			<input 
+				type="text" 
+				name="back_link_website_name" 
+				id="back_link_website_name" 
+				value="<!-- tmpl_var list_settings.back_link_website_name escape="HTML"-->"
+			>
 		</div>
 	</div>
 	
 	<div class="row">
 		<div class="small-12 columns">	
-			<label for="website_url"> 
+			<label for="back_link_website_url"> 
 				Site URL
 			</label>
 			<input 
 				type="text" 
-				name="website_url" 
-				id="website_url" 
-				value="<!-- tmpl_var list_settings.website_url escape="HTML" -->"
+				name="back_link_website_url" 
+				id="back_link_website_url" 
+				value="<!-- tmpl_var list_settings.back_link_website_url escape="HTML" -->"
 				placeholder="http://"
 			>
 		</div>
