--- a/dada/templates/list_template.tmpl
+++ b/dada/templates/list_template.tmpl
@@ -49,11 +49,11 @@
 
 		<!-- tmpl_var content --> 
 
-		<!-- tmpl_if list_settings.website_name --> 
-			<!-- tmpl_if list_settings.website_url --> 
+		<!-- tmpl_if list_settings.back_link_website_name --> 
+			<!-- tmpl_if list_settings.back_link_website_url --> 
 				Go back to 
-			    <a href="<!-- tmpl_var list_settings.website_url -->">
-				  	<!-- tmpl_var list_settings.website_name -->
+			    <a href="<!-- tmpl_var list_settings.back_link_website_url -->">
+				  	<!-- tmpl_var list_settings.back_link_website_name -->
 				</a>
 			<!-- /tmpl_if --> 
 		<!-- /tmpl_if -->
