--- a/dada/templates/filtered_list_activity_widget.tmpl
+++ b/dada/templates/filtered_list_activity_widget.tmpl
@@ -15,7 +15,7 @@
 			</strong>:
 		<!-- /tmpl_if --> 
 		
-		<!-- tmpl_if expr="(action eq 'subscribed')" --> 
+		<!-- tmpl_if expr="(action eq 'subscription')" --> 
 			&#8594; 
 			<!-- tmpl_if show_email -->
 				<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=membership&email=<!-- tmpl_var email escape=URL -->&type=<!-- tmpl_var type -->">
@@ -30,7 +30,7 @@
 			 to
 		<!-- /tmpl_if -->
 		
-		<!-- tmpl_if expr="(action eq 'unsubscribed')" --> 
+		<!-- tmpl_if expr="(action eq 'unsubscribe')" --> 
 			&#8592; <!-- tmpl_if show_email --><a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=membership&email=<!-- tmpl_var email escape=URL -->&type=<!-- tmpl_var type -->"><!-- tmpl_var email --></a><!-- /tmpl_if -->
 			<!-- tmpl_if expr="(type eq 'list')" -->
 				<strong>Unsubscribed</strong>
@@ -62,7 +62,7 @@
 		<!-- /tmpl_if -->
 		
 		
-		<!-- tmpl_if expr="((action eq 'subscribed') || (action eq 'unsubscribed')  || (action eq 'confirmation_sent') || (action eq 'subscription_updated'))" --> 
+		<!-- tmpl_if expr="((action eq 'subscription') || (action eq 'unsubscribe')  || (action eq 'confirmation_sent') || (action eq 'subscription_updated'))" --> 
 	
 			
 			
