Setup should be, "Set Up" but perhaps better to be, "Create"

--- a/dada/templates/manage_list_consent.tmpl
+++ b/dada/templates/manage_list_consent.tmpl
@@ -121,7 +121,7 @@
 	
 
 <fieldset> 
-	<legend>Setup New Consent</legend>
+	<legend>Create a New Consent</legend>
 <form action="<!-- tmpl_var PROGRAM_URL -->" method="POST" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
 
      <input type="hidden" name="flavor" value="manage_list_consent"> 
