Just add what the required version is of PHP for Rich Filemanager.

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1089,7 +1089,7 @@
 						value="rich_filemanager"
 						checked="checked"
 					>
-					Install Rich FileManager (default)
+					Install Rich FileManager (default, requires PHP v5.6.4)
 				</label>
 
 
