--- a/dada/templates/send_url_email_screen.tmpl
+++ b/dada/templates/send_url_email_screen.tmpl
@@ -158,7 +158,7 @@
 				  </li>
 			      <li class="tab-title">
 					<a href="#file_attachments">
-						File Attachments
+						Attachments
 					</a>
 				  </li>
 				<li class="tab-title">
@@ -235,6 +235,10 @@
 					</div>
 				</dd>
 			</dl>
+			
+			<!-- tmpl_include send_email_draft_notice_widget.tmpl --> 
+			
+			
 					
 					<div class="show-for-small-only">
 						<div class="button_toolbar">
@@ -242,11 +246,22 @@
 						</div>
 					</div>
 					
-					
+					<!--
+					# These are for mime list and lwp simple
+					# I don't know if I can do this screenw ith out mime::list::HTML
+					--> 
+						
 					<!-- /tmpl_unless --> 
 				<!-- /tmpl_unless --> 	
-			<!-- ?!?!!!? -->			
-		</div>	
+			
+	</div><!-- entire_form -->
+	</div>
+	
+	
+	<div class="show-for-small-only">
+		<div class="button_toolbar">
+			<input type="button" value="Loading..." class="button small" >
+		</div>
 	</div>
 	
 
