--- a/dada/templates/send_email_screen.tmpl
+++ b/dada/templates/send_email_screen.tmpl
@@ -39,24 +39,24 @@
 	</div>
 </div>
 
+<div id="send_email"></div> 
 
-<div id="send_email_screen"></div> 
 
-<form name="mass_mailing" id="mass_mailing" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post"  accept-charset="<!-- tmpl_var HTML_CHARSET -->">
-	<input type="hidden" id="list"               name="list"             value="<!-- tmpl_var list_settings.list -->" >
-	<input type="hidden" id="sched_flavor"       name="sched_flavor"     value="<!-- tmpl_var sched_flavor -->" >
+<form name="mass_mailing" id="mass_mailing" action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post">
+	<input type="hidden" id="list"               name="list"                  value="<!-- tmpl_var list_settings.list -->" >
+	<input type="hidden" id="sched_flavor"       name="sched_flavor"          value="<!-- tmpl_var sched_flavor -->" >
 
-	<input type="hidden" name="s_program_url"     id="s_program_url"     value="<!-- tmpl_var S_PROGRAM_URL -->" >
-	<input type="hidden" id="flavor"             name="flavor"                value="send_email" >
+	<input type="hidden" name="s_program_url"      id="s_program_url"    value="<!-- tmpl_var S_PROGRAM_URL -->" >
+	<input type="hidden" name="flavor"            id="flavor"            value="send_email" >
 	<input type="hidden" name="support_files_url" id="support_files_url" value="<!-- tmpl_var SUPPORT_FILES_URL -->" >
-	
+
 	<input type="hidden" id="draft_alert"        name="draft_alert"           value="<!-- tmpl_var draft_alert default="0" -->" >
 	<input type="hidden" id="draft_id"           name="draft_id"              value="<!-- tmpl_var draft_id -->"                > 
 	<input type="hidden" id="save_draft_role"    name="save_draft_role"       value=""                                          >
 	<input type="hidden" id="draft_role"         name="draft_role"            value="<!-- tmpl_var draft_role -->"              >
 	<input type="hidden" id="restore_from_draft" name="restore_from_draft"    value="<!-- tmpl_var restore_from_draft -->"      >
-
-
+	
+	
 	 <div class="contain-to-grid sticky hide-for-small-only" style="text-align:center">
 	   <nav data-topbar role="navigation" data-options="sticky_on: large">
 			<div id="buttons" style="background-color:#fff;">
@@ -66,11 +66,34 @@
 			</div>
 		</nav>
 	 </div>
-	 
-	<!-- tmpl_include send_email_button_action_notice_widget.tmpl -->
+
+	 <!-- tmpl_include send_email_button_action_notice_widget.tmpl -->
 	
 	<div id="entire_form">
-		<div id="form_widgets">
+		<div id="form_widgets"> 
+			
+			<!-- tmpl_unless can_use_mime_lite_html -->
+				<div class="alert-box alert radius">
+					<p>
+						Disabled. The 'MIME::Lite::HTML' Perl Library needs to be installed, or is missing required components. More information below:
+					</p>
+					<code> 
+						<!-- tmpl_var mime_lite_html_error -->
+					</code> 
+				</div>
+			<!-- tmpl_else-->
+				<!-- tmpl_unless can_use_lwp_simple -->
+					<div class="alert-box alert radius">
+						<p>
+							Disabled. The 'LWP' Perl Library needs to be installed. More information below: 
+						</p>
+						<code> 
+							<!-- tmpl_var lwp_simple_error --> 
+						</code> 
+					</div> 
+				<!-- tmpl_else-->
+				
+
 			<!-- tmpl_if draft_id --> 
 				<!-- tmpl_if expr="(draft_role eq 'draft')" --> 
 					<!-- 
@@ -109,117 +132,131 @@
 			<!-- tmpl_include send_email_schedule_options_widget.tmpl -->
 
 			<!-- tmpl_include send_email_headers_widget.tmpl --> 
-				
-				    <ul class="tabs show-for-medium-up" data-tab>
-				      <li 
+			
+			    <ul class="tabs show-for-medium-up" data-tab>
+			      <li 
+				  	<!-- tmpl_if expr="((list_settings.use_wysiwyg_editor eq 'none') || (using_no_wysiwyg_editor == 1))" -->
+						class="tab-title"
+					<!-- tmpl_else -->
+						class="tab-title active"
+					<!-- /tmpl_if -->
+					>
+					  	<a href="#html_message">
+							HTML Version
+						</a>
+				  </li>
+			      <li
+				  	<!-- tmpl_if expr="((list_settings.use_wysiwyg_editor eq 'none') || (using_no_wysiwyg_editor == 1))" -->
+						class="tab-title active"
+					<!-- tmpl_else -->
+						class="tab-title"
+					<!-- /tmpl_if -->
+					>
+				 		<a href="#plaintext_message">
+					  	  PlainText Version
+					  	</a>
+				  </li>
+			      <li class="tab-title">
+					<a href="#file_attachments">
+						Attachments
+					</a>
+				  </li>
+				<li class="tab-title">
+					<a href="#layout">
+						Layout
+					</a>
+				</li>
+			      <li class="tab-title">
+					  <a href="#options">
+						Options
+					  </a>
+				 	</li>
+			    </ul>
+			<dl class="accordion" data-accordion>
+				<dd class="accordion-navigation">
+					<a href="#html_message" class="show-for-small-only">
+						HTML Version
+					</a>
+					<div id="html_message" 
+				  	<!-- tmpl_if expr="((list_settings.use_wysiwyg_editor eq 'none') || (using_no_wysiwyg_editor == 1))" -->
+						class="content"
+					<!-- tmpl_else -->
+						class="content active"
+					<!-- /tmpl_if -->
+					>
+						<div class="content-box section-box">
+							<!-- tmpl_include send_email_html_message_form_field_widget.tmpl --> 
+		    			</div>
+					</div>
+					<a href="#plaintext_message" class="show-for-small-only">
+						PlainText Version
+					</a>
+					<div id="plaintext_message" 
 					  	<!-- tmpl_if expr="((list_settings.use_wysiwyg_editor eq 'none') || (using_no_wysiwyg_editor == 1))" -->
-							class="tab-title"
+							class="content active"
 						<!-- tmpl_else -->
-							class="tab-title active"
+							class="content"
 						<!-- /tmpl_if -->
-						>
-						  	<a href="#html_message">
-								HTML Version
-							</a>
-					  </li>
-				      <li
-					  	<!-- tmpl_if expr="((list_settings.use_wysiwyg_editor eq 'none') || (using_no_wysiwyg_editor == 1))" -->
-							class="tab-title active"
-						<!-- tmpl_else -->
-							class="tab-title"
-						<!-- /tmpl_if -->
-						>
-					 		<a href="#plaintext_message">
-						  	  PlainText Version
-						  	</a>
-					  </li>
-						<li class="tab-title">
-							<a href="#file_attachments">
-								Attachments
-							</a>
-						</li>
-						<li class="tab-title">
-							<a href="#layout">
-								Layout
-							</a>
-						</li>
-				      <li class="tab-title">
-						  <a href="#options">
-							Options
-						  </a>
-					 	</li>
-				    </ul>
-
-					<dl class="accordion" data-accordion>
-						<dd class="accordion-navigation">
-							<a href="#html_message" class="show-for-small-only">
-								HTML Version
-							</a>
-							<div id="html_message" 
-						  	<!-- tmpl_if expr="((list_settings.use_wysiwyg_editor eq 'none') || (using_no_wysiwyg_editor == 1))" -->
-								class="content"
-							<!-- tmpl_else -->
-								class="content active"
-							<!-- /tmpl_if -->
-							>
-								<div class="content-box section-box">
-									<!-- tmpl_include html_message_form_field_widget.tmpl --> 
-				    			</div>
-							</div>
-							<a href="#plaintext_message" class="show-for-small-only">
-								PlainText Version
-							</a>
-							<div id="plaintext_message" 
-							  	<!-- tmpl_if expr="((list_settings.use_wysiwyg_editor eq 'none') || (using_no_wysiwyg_editor == 1))" -->
-									class="content active"
-								<!-- tmpl_else -->
-									class="content"
-								<!-- /tmpl_if -->
-							>
-								<div class="content-box section-box">
-				    				<!-- tmpl_include plaintext_message_form_field_widget.tmpl -->
-				    			</div>
-							</div>
-			
-							
-							
-							<a href="#file_attachments" class="show-for-small-only">
-								Attachments
-							</a>
-							<div id="file_attachments" class="content">
-								<div class="content-box section-box">
-				    				<!-- tmpl_include send_email_file_attachments_widget.tmpl -->
-				       		   </div>
-							</div>
-			
-							<div id="layout" class="content">
-								<div class="content-box section-box">
-				    				<!-- tmpl_include send_email_layout_widget.tmpl -->
-				       		   </div>
-							</div>
-							<a href="#layout" class="show-for-small-only">
-								Layout
-							</a>			
-			
-			
-			
-			
-			
-							<a href="#options" class="show-for-small-only">
-								Options
-							</a>
-							<div id="options" class="content">
-								<div class="content-box section-box">
-									<!-- tmpl_include send_email_options_widget.tmpl -->
-				    				
-				       		   </div>
-							</div>
-						</dd>
-					</dl>
+					>
+						<div class="content-box section-box">
+		    				<!-- tmpl_include send_email_plaintext_message_form_field_widget.tmpl -->
+		    			</div>
+					</div>
+					<a href="#file_attachments" class="show-for-small-only">
+						Attachments
+					</a>
+					<div id="file_attachments" class="content">
+						<div class="content-box section-box">
+		    				<!-- tmpl_include send_email_file_attachments_widget.tmpl -->
+		       		   </div>
+					</div>
 					
-				<!-- tmpl_include send_email_draft_notice_widget.tmpl --> 
-		</div>
+					
+					<a href="#layout" class="show-for-small-only">
+						Layout
+					</a>
+					<div id="layout" class="content">
+						<div class="content-box section-box">
+		    				<!-- tmpl_include send_email_layout_widget.tmpl -->
+		       		   </div>
+					</div>
+					
+					
+					
+					
+						<a href="#options" class="show-for-small-only">
+						Options
+					</a>
+					<div id="options" class="content">
+						<div class="content-box section-box">
+							<!-- tmpl_include send_email_options_widget.tmpl -->
+		    				
+		       		   </div>
+					</div>
+				</dd>
+			</dl>
+			
+			<!-- tmpl_include send_email_draft_notice_widget.tmpl --> 
+			
+			
+					
+					<div class="show-for-small-only">
+						<div class="button_toolbar">
+							<input type="button" value="Loading..." class="button small" >
+						</div>
+					</div>
+					
+					<!--
+					# These are for mime list and lwp simple
+					# I don't know if I can do this screenw ith out mime::list::HTML
+					--> 
+						
+					<!-- /tmpl_unless --> 
+				<!-- /tmpl_unless --> 	
+			
 	</div><!-- entire_form -->
+	</div>
+	
 	
 	<div class="show-for-small-only">
 		<div class="button_toolbar">
@@ -227,9 +264,9 @@
 		</div>
 	</div>
 	
+
+	
 	
 </form>
 
-<!-- tmpl_include send_email_message_body_help_widget.tmpl -->
-
-<!-- end send_email_screen.tmpl -->
+<!-- end send_url_screen.tmpl -->
